--- a/assets/src/scss/component/_advanced-search.scss
+++ b/assets/src/scss/component/_advanced-search.scss
@@ -92,6 +92,10 @@
           font-size: 14px;
           font-weight: 400;
         }
+        .directorist-form-group__prefix{
+          opacity: 0;
+          transition: opacity 0.3s ease;
+        }
         .directorist-search-field__input {
           &::placeholder {
             opacity: 0;
@@ -115,6 +119,9 @@
             font-size: 16px;
             font-weight: 500;
             margin: 0;
+          }
+          .directorist-form-group__prefix{
+            opacity: 1;
           }
           .directorist-search-field__input {
             bottom: 0;
