--- a/assets/src/scss/component/_modal.scss
+++ b/assets/src/scss/component/_modal.scss
@@ -208,6 +208,10 @@
           color: var(--directorist-color-body);
           transition: opacity 0.3s ease, top 0.3s ease, font-size 0.3s ease;
         }
+        .directorist-form-group__prefix{
+          opacity: 0;
+          transition: opacity 0.3s ease;
+        }
         .directorist-search-field__input {
           &.directorist-form-element {
             padding-right: 20px;
@@ -269,6 +273,9 @@
             &::placeholder {
               opacity: 1;
             }
+          }
+          .directorist-form-group__prefix{
+            opacity: 1;
           }
           .directorist-search-field__label {
             top: 0;
